Todo is working

--- a/todo/index.html
+++ b/todo/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>React Mount Umount</title>
+  <title>React Todo</title>
   <script src="https://fb.me/react-with-addons-0.13.3.js"></script>
   <script src="https://fb.me/JSXTransformer-0.13.3.js"></script>
 </head>
