Gulp + browserify + es6 + babel is working

--- a/gulp-test/index.html
+++ b/gulp-test/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <div data-js="main"></div>
-  <script src="public/js/main.js"></script>
+  <script src="build/build.js"></script>
 </body>
 </html>
